--- a/cap05/form.html
+++ b/cap05/form.html
@@ -7,7 +7,7 @@
     <title>Formulários HTML e PHP</title>
 </head>
 <body>
-    <form action="form_process.php" method="GET">
+    <form action="form_process.php" method="POST">
         Nome:
         <input type="text" name="nome" />
         <br>
